--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "zendframework/zend-diactoros": "^2.1",
         "aura/router": "^3.1",
         "twig/twig": "^2.11",
-        "respect/validation": "^1.1"
+        "respect/validation": "^1.1",
+        "vlucas/phpdotenv": "^3.6"
     }
 }
