--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "aura/router": "^3.1",
         "twig/twig": "^2.11",
         "respect/validation": "^1.1",
-        "vlucas/phpdotenv": "^3.6"
+        "vlucas/phpdotenv": "^3.6",
+        "php-di/php-di": "^6.0"
     }
 }
