--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,10 @@
         "php-di/php-di": "^6.0",
         "woohoolabs/harmony": "^6.1",
         "zendframework/zend-httphandlerrunner": "^1.1",
-        "middlewares/aura-router": "^2.0"
+        "middlewares/aura-router": "^2.0",
+        "filp/whoops": "^2.5",
+        "middlewares/whoops": "^2.0",
+        "franzl/whoops-middleware": "^1.1",
+        "monolog/monolog": "^2.0"
     }
 }
