--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "filp/whoops": "^2.5",
         "middlewares/whoops": "^2.0",
         "franzl/whoops-middleware": "^1.1",
-        "monolog/monolog": "^2.0"
+        "monolog/monolog": "^2.0",
+        "robmorgan/phinx": "^0.11.3"
     }
 }
